# Projects

./: .gitignore
CS7643 DeepLearning/: Readme.md
CSE6242 Data and Visual Analytics/: README.md
ISYE6740 Computational Data Analytics/: ISyE6740_Project_template.docx
MGT6203 Analytics for Business/: README.md
cifar10_research_to_development/: Readme.md
research_to_deployment/cifar10/production/: MANIFEST.in  requirements.txt  setup.cfg  setup.py
research_to_deployment/cifar10/production/cifar_10_model/: __init__.py  config.yml  model.py  train.py
research_to_deployment/cifar10/production/cifar_10_model/cifar_10_model/: predict.py
research_to_deployment/cifar10/production/cifar_10_model/cifar_10_model/config/: config.py
research_to_deployment/cifar10/production/cifar_10_model/cifar_10_model/processing/: data_management.py  preprocessors.py
research_to_deployment/cifar10/production/cifar_10_model/config/: config.py
research_to_deployment/cifar10/production/cifar_10_model/processing/: preprocessors.py
research_to_deployment/cifar10/production/cifar_10_model/tests/: conftest.py
research_to_deployment/cifar10/production/requirements/: requirements.txt
research_to_deployment/cifar10/production/src/cifar_10_model/: train.py
research_to_deployment/cifar10/production/src/cifar_10_model/processing/: data_management.py
research_to_deployment/cifar10/production/src/cifar_10_model_gudiduriss_v1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
research_to_deployment/cifar10/production/tests/: conftest.py  test_predict.py
(+417 files in other folders)
