
[metadata]
name = cifar_10_model_gudiduriss_v1
version = 7.1.0
author = Sid Gudiduri
author_email = siddu.gemeni@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sgudiduri/Projects/tree/main/research_to_deployment/cifar10/production
project_urls =
    Bug Tracker = https://github.com/sgudiduri/Projects/tree/main/research_to_deployment/cifar10/production
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.15

[options.packages.find]
where = src